Fix inputs overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-#root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
-  /* padding: .5rem; */
-}
-
 body {
   background-attachment: fixed;
   background-image: url("assets/background.png");
@@ -18,4 +12,11 @@ body {
   body {
     background-image: url("assets/background-large.png");
   }
+}
+
+table, input, select {
+  border-radius: 2vmin;
+  border-width: 1px;
+  box-sizing: border-box;
+  width: 100%;
 }
